# gyaan_auth/api_specs/api_spec.json
@@ -51,6 +51,27 @@
             "password"
           ]
         },
+        "LoginResponse":{
+          "type":"object",
+          "properties":{
+            "access_token":{
+              "type":"string",
+              "example":"access_token"
+            },
+            "is_admin":{
+              "type":"boolean"
+            },
+            "is_domain_expert":{
+              "type":"boolean"
+            }
+
+          },
+          "required":[
+            "access_token",
+            "is_admin",
+            "is_domain_expert"
+          ]
+        },
         "User":{
           "type":"object",
           "properties":{
@@ -212,6 +233,14 @@
         }
     },
     "parameters": {
+        "LoginParameters": {
+                  "description": "Success response",
+                  "in": "body",
+                  "name": "user_credentails",
+                  "schema":{
+                    "$ref":"#/definitions/LoginCredentails"
+                  }
+              },
         "DomainPostsOffsetParameter":{
           "name":"offset",
           "in" :"query",
@@ -230,6 +259,64 @@
         }
     },
     "responses":{
+      "LoginResponse":{
+        "description":"user loggin",
+        "schema":{
+          "$ref":"#/definitions/LoginResponse"
+        }
+      },
+      "LoginFailureReponseNotFoundResponse":{
+        "description":"Not Found Failure Reponse",
+        "schema": {
+                "type": "object",
+                "properties": {
+                    "response": {
+                        "type": "string"
+                    },
+                    "http_status_code": {
+                        "type": "integer",
+                        "example": 404
+                    },
+                    "res_status": {
+                        "type": "string",
+                        "enum": [
+                            "INVALID_USERNAME"
+                        ]
+                    }
+                },
+                "required": [
+                    "response",
+                    "http_status_code",
+                    "res_status"
+                ]
+            }
+      },
+      "LoginFailureReponseBadRequestResponse":{
+        "description":"Bad Request Failure Reponse",
+        "schema": {
+                "type": "object",
+                "properties": {
+                    "response": {
+                        "type": "string"
+                    },
+                    "http_status_code": {
+                        "type": "integer",
+                        "example": 400
+                    },
+                    "res_status": {
+                        "type": "string",
+                        "enum": [
+                            "INVALID_PASSWORD"
+                        ]
+                    }
+                },
+                "required": [
+                    "response",
+                    "http_status_code",
+                    "res_status"
+                ]
+            }
+      },
       "GetDomaindetailsResponseOffsetBadRequest":{
         "description":"Bad Request Failure Reponse",
         "schema": {
@@ -337,16 +424,32 @@
       }
     },
     "paths": {
+        "/user/login/v1/": {
+            "post": {
+                "operationId": "signin_user",
+                "summary": "validate user details and login valid user",
+                "description": "validate details and login the user",
+                "parameters": [{
+                    "$ref": "#/parameters/LoginParameters"
+                }],
+                "responses": {
+                    "200": {
+                        "$ref": "#/responses/LoginResponse"
+                    },
+                    "404": {
+                        "$ref":"#/responses/LoginFailureReponseNotFoundResponse"
+                    },
+                    "400":{
+                      "$ref":"#/responses/LoginFailureReponseBadRequestResponse"
+                    }
+                }
+            }
+        },
       "/domain/{domain_id}/v1/":{
         "get":{
           "operationId": "get_domain_details",
           "summary": " Get domain details",
           "description":" Get details of Particular Domain",
-          "security": [{
-                    "oauth": [
-                        "read"
-                    ]
-          }],
           "parameters": [
               {
                   "name": "domain_id",
@@ -370,11 +473,6 @@
           "operationId": "get_domain_posts",
           "summary": "Get Domain Posts",
           "description": "Get details of particular domain",
-          "security": [{
-                    "oauth": [
-                        "read"
-                    ]
-          }],
           "parameters":[
             {
                   "name": "domain_id",
